Fixed logo alignment

--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -5,68 +5,59 @@
 
 }
 
-
 .header {
     background-color: #181d20;
     color: #fff;
     min-height: 400px;
-
-    .detailbg {
-        width:100%;
-        height:100%;
-        object-fit: cover;
-        overflow: hidden;
-    }
-
-
-    .logo {
-        // background-color: #222;
-        
-        width : 122px;
-        height: auto;
-        margin-top: 140px;
-        margin-bottom: 12px;
-        
-    }
-    .title {
-        //background-color: #ff4634;
-
-        max-width: 780px;
-        margin-right: auto;
-        margin-left: auto;
-        margin-bottom: 20px;
-
-        font-family: 'bebas-neue-by-fontfabric', sans-serif;
-        font-weight: 200;
-        font-size: 48px;
-        letter-spacing: 1.5px;
-        line-height: 51px;
-
-        @media only screen and (max-width: 414px) and (min-width: 320px) {
-
-            max-width: 350px;
-            }
-
-        @media only screen and (max-width: 768px) and (min-width: 414px) {
-
+    position: relative;
+    background-size: 100%;
+    .wrapper {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        .logo {
+            width : 122px;
+            height: auto;
+            margin-left: 120px;
+        }
+        .title {
             max-width: 780px;
+            margin-left: 120px;
+            margin-top: 0;
+            margin-bottom: 0;
+    
+            font-family: 'bebas-neue-by-fontfabric', sans-serif;
+            font-weight: 200;
+            font-size: 48px;
+            letter-spacing: 1.5px;
+            line-height: 51px;
+    
+            @media only screen and (max-width: 414px) and (min-width: 320px) {
+    
+                max-width: 350px;
+                }
+    
+            @media only screen and (max-width: 768px) and (min-width: 414px) {
+    
+                max-width: 780px;
+                }
+    
+        }
+        .description {
+            max-width: 780px;
+            margin-left: 120px;
+            padding-bottom: 40px;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: 100;
+            line-height: 26px;
+            letter-spacing: .2px;
+            font-size: 16px;
+    
+            @media only screen and (max-width: 600px) and (min-width: 400px) {
+    
+                max-width: 350px;
             }
-
-    }
-    .description {
-        max-width: 780px;
-        margin: auto;
-        padding-bottom: 40px;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 100;
-        line-height: 26px;
-        letter-spacing: .2px;
-        font-size: 16px;
-
-        @media only screen and (max-width: 600px) and (min-width: 400px) {
-
-            max-width: 350px;
-            }
+        } 
     }
 }
 
